# camera_control

./: CMakeLists.txt  package.xml
src/: gstreamer_camera_node.cpp
